// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > Input Checkbox renders correctly 1`] = `
<div
  className="checkbox"
>
  <label
    htmlFor="do-the-thing-input-0"
  >
    <input
      defaultChecked={true}
      id="do-the-thing-input-0"
      label="Do the thing?"
      type="checkbox"
    />
     
    Do the thing?
  </label>
</div>
`;

exports[`Component > Input File renders correctly 1`] = `
<Group
  id="files-input-1"
  label="s"
  multiple={true}
  name="files"
>
  <ForwardRef
    id="files-input-1"
    label="s"
    multiple={true}
    name="files"
    type="file"
  />
</Group>
`;

exports[`Component > Input Group renders correctly 1`] = `
<div
  className="form-group"
/>
`;

exports[`Component > Input Input renders correctly 1`] = `
<input
  className="form-control"
  id="some-input-input-2"
  name="someInput"
  placeholder="Enter Text"
  value=""
/>
`;

exports[`Component > Input Number renders correctly 1`] = `
<Group
  id="some-number-input-3"
  name="someNumber"
  placeholder="Enter Number"
  value={12345}
>
  <ForwardRef
    id="some-number-input-3"
    min={0}
    name="someNumber"
    onChange={[Function]}
    onWheel={[Function]}
    placeholder="Enter Number"
    type="text"
    value={12345}
  />
</Group>
`;

exports[`Component > Input Number renders correctly with invalid max value 1`] = `
<NumberInput
  max={2}
  name="someNumber3"
  placeholder="Enter Number"
>
  <Group
    className="has-error"
    id="some-number-3-input-7"
    max={2}
    name="someNumber3"
    placeholder="Enter Number"
  >
    <div
      className="form-group has-error"
    >
      <ForwardRef
        id="some-number-3-input-7"
        max={2}
        min={0}
        name="someNumber3"
        onChange={[Function]}
        onWheel={[Function]}
        placeholder="Enter Number"
        type="text"
        value=""
      >
        <input
          className="form-control"
          id="some-number-3-input-7"
          max={2}
          min={0}
          name="someNumber3"
          onChange={[Function]}
          onWheel={[Function]}
          placeholder="Enter Number"
          type="text"
          value=""
        />
      </ForwardRef>
      <span
        className="help-block"
      >
        Enter a number between 0-2
      </span>
    </div>
  </Group>
</NumberInput>
`;

exports[`Component > Input Number renders correctly with invalid min value 1`] = `
<NumberInput
  min={5}
  name="someNumber2"
  placeholder="Enter Number"
>
  <Group
    className="has-error"
    id="some-number-2-input-5"
    min={5}
    name="someNumber2"
    placeholder="Enter Number"
  >
    <div
      className="form-group has-error"
    >
      <ForwardRef
        id="some-number-2-input-5"
        min={5}
        name="someNumber2"
        onChange={[Function]}
        onWheel={[Function]}
        placeholder="Enter Number"
        type="text"
        value=""
      >
        <input
          className="form-control"
          id="some-number-2-input-5"
          min={5}
          name="someNumber2"
          onChange={[Function]}
          onWheel={[Function]}
          placeholder="Enter Number"
          type="text"
          value=""
        />
      </ForwardRef>
      <span
        className="help-block"
      >
        Enter a number ≥ 5
      </span>
    </div>
  </Group>
</NumberInput>
`;

exports[`Component > Input Select renders correctly 1`] = `
<Group
  id="select-an-option-input-8"
  label="Select an option"
  value=""
>
  <select
    className="form-control"
    id="select-an-option-input-8"
    label="Select an option"
    value=""
  >
    <option
      key="1"
      value="1"
    >
      1
    </option>
    <option
      key="2"
      value="2"
    >
      2
    </option>
  </select>
</Group>
`;

exports[`Component > Input Text renders correctly 1`] = `
<Group
  id="some-text-input-9"
  label="Enter text"
  name="someText"
  value="blah"
>
  <ForwardRef
    id="some-text-input-9"
    label="Enter text"
    name="someText"
    type="text"
    value="blah"
  />
</Group>
`;
